fix: metadata got overlap with diff selector

--- a/src/style.css
+++ b/src/style.css
@@ -80,7 +80,8 @@ body {
 		height: auto;
 	}
 
-	#metadata, #diffsLabel {
+	#metadata,
+	#diffsLabel {
 		width: 100%;
 	}
 
